--- a/README.org
+++ b/README.org
@@ -8,7 +8,7 @@ A sandbox environment for C++ experimentation:
 ** Run
 Edit ~main.cpp~ file
 #+begin_src sh
-  $ cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=Debug  # Configure
+  $ cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=<Debug|Release>  # Configure
   $ cmake --build build  # Build
   $ ./build/main  # Run
   $ lldb ./build/main  # Debug
@@ -24,7 +24,7 @@ Install GoogleTest
 
 Edit ~test.cpp~ file
 #+begin_src sh
-  $ cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=Debug  # Configure
+  $ cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=<Debug|Release>  # Configure
   $ cmake --build build  # Build
   $ ./build/test  # Run
   $ lldb ./build/test  # Debug
